--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ php:
   - 5.5
   - 5.6
   - hhvm  
+  - 7.0
 
 before_script:
+ - composer self-update
  - composer install
  - wget https://scrutinizer-ci.com/ocular.phar
 
